frontend/html/styles.css
:root {
	color-scheme: light dark;

	--dark-mode-background: 
}

@font-face {
	font-family: Montserat;
	src: url("Montserrat-VariableFont_wght.ttf");
}

body {
	font-family: Montserat, Verdana, Geneva, Tahoma, sans-serif;

}

#header {
	display: flex;
	flex-direction: column;
	align-items: center;
}

#header h1 {
	font-weight: 400;
}

#messages-container {
	display: flex;
	width: 100%;
	flex-direction: column;
	align-items: center;
	gap: 10px;
}

.message-container {
	width: 90%;
	display: none;
	border: 1px solid lightgrey;
	border-radius: 10px;
	padding: 20px;
	overflow: auto;
}

@media only screen and (min-width: 600px) {
	.message-container {
		max-width: 700px;
	}
}

.message-header {
	color: grey;
}

.message-content {
}

#chat-form {
	margin-top: 15px;
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: 10px;
}

input[type=text] {
	width: 300px;
	padding: 10px;
	font-weight: 300;
	font-size: medium;
	border: 1px solid lightgrey;
	border-radius: 5px;
}

input[type=submit] {
	width: 220px;
	background-color: #415a77;
	color: white;
	border: none;
	padding: 10px;
	font-weight: 500;
	font-size: large;
	border-radius: 5px;
}

input[type=submit]:disabled {
	background-color: #808080;
}

input[type=submit]:hover:not(:disabled) {
	background-color: #778da9;
	cursor: pointer;
}

input[type=submit]:active:not(:disabled) {
	background-color: #1b263b;
	cursor: pointer;
}

